# Carbon-MRV-Audit

./: .gitignore  LICENSE.MD  README.md  f4f_ground_data_13Oct25.csv  hierarchical_dbh_model.py  hierarchical_dbh_v2.py  hierarchical_dbh_v3.py  hierarchical_dbh_v31.py  make_figures.py  pyproject.toml  requirements.txt
out_v2/: residuals_v2.csv  species_params_v2.csv  test_v2.csv  train_v2.csv
out_v3/: residuals_v3.csv  species_params_v3.csv  test_v3.csv  train_v3.csv  v3_1_corrected_carbon.csv
