[project]
name = "f4f"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.23.4",
    "matplotlib>=3.10",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pymc>=5.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]
